<resources>
    <string name="Homepage_String">Search what you want, go Online or just Swipe. Discover the fascinating World of Internet on Boxer Internet</string>
    <string name="Internet">Internet</string>
    <string name="I_Agree_with">I agree with</string>
    <string name="Welcome_to">Welcome to</string>
    <string name="In_Boxer">Boxer</string>
    <string name="Indias_Internet">India\'s Internet </string>
    <string name="Continue">Continue</string>
    <string name="Wallpaper_On">Wallpaper ON</string>
    <string name="Wallpaper_Off">Wallpaper OFF</string>
    <string name="Get_IT">Get It</string>
    <string name="Download_wallpaper">Download wallpaper </string>
    <string name="Keep_my_wallpaper"> Keep my wallpaper</string>
    <string name="What_colour_are_you_today"> What colour are you today?</string>
    <string name="Free">Free</string>
    <string name="Please_Select_Default_Search_Engine">Please select default search engine</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Download_Cancelled">Download cancelled</string>
    <string name="Pressagaintoexit">Press gain to exit</string>
    <string name="Feedback">Feedback</string>
    <string name="Subject">Subject</string>
    <string name="Your_feedback_here">Your feedback here</string>
    <string name="Your_mail_id_here">Your mail id here</string>
    <string name="Submit"> Submit  </string>
    <string name="Loading">Loading...</string>
    <string name="Press_again_to_exit">Press again to exit</string>
    <string name="File_downloaded_to"> File Downloaded to</string>
    <string name="Something_went_wrong">Something went wrong....</string>
    <string name="Cannot_go_forward">Can not go forward</string>
    <string name="app_name">  Boxer Internet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Action Bar</string>
    <string name="btn_send_message">Send Message</string>
    <string name="activity_location_found">Location Found</string>
    <string name="Search_Engine">Search Engine</string>
    <string name="Set_your_default_search_engine">Set your default search engine</string>
    <string name="Control_and_customise_Boxer_Browser">Control and customise Boxer Internet</string>
    <string name="help">Help</string>
    <string name="Read_More"><u>Read more</u></string>
    <string name="find_in_page">Find In Page</string>
    <string name="Get_your_answers_here">Get your answers here !</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="User_privacy_policy">User privacy policy</string>
    <string name="Terms_and_Condition">Terms and Condition</string>
    <string name="User_License_Policy">User License Policy</string>
    <string name="CONTINUE"> CONTINUE </string>
    <string name="About_Boxer">About Boxer</string>
    <string name="Rate_us">Rate us</string>
    <string name="Rate_us_substring">Love the app? Give us 5 star</string>
    <string name="The_latest_from_Boxer_Browser">The latest from Boxer Browser</string>
    <string name="Drop_us_a_line">Drop us a line</string>
    <string name="Add_BookMark">Add BookMark</string>
    <string name="History">History</string>
    <string name="Copy_Link">Copy Link</string>
    <string name="Find_In_Page_hint">Enter here</string>
    <string name="Find_In_Page">Find In Page</string>
    <string name="BookMarks">BookMarks</string>
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="Terms_and_Conditions"><u>Terms and Conditions</u></string>
    <string name="search_hint">Enter Address or Search</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_splash">  Boxer Internet</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="spinner_title">Select Category</string>
    <string name="check_TnC">Please check Terms and Conditions</string>
    <string name="bookmark_added">Bookmark Added</string>
    <string name="search_box_hint">Enter Address or Search</string>
    <string name="no_tab_open">No Tab\'s open as yet</string>
    <string name="title_activity_app_detail">AppDetail</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_license">License</string>
    <string name="title_activity_no_internet_connection">No Internet Connection</string>
    <string name="title_activity_my_web_view">MyWebView</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_main_search">MainSearch</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_new_tab">New Tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_add_bookmark">Add Bookmark</string>
    <string name="action_copy">Copy Link</string>
    <string name="action_forward">Forward</string>
    <string name="google">Google</string>
    <string name="settings">Settings</string>
    <string name="location">Location Access</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User Agent</string>
    <string name="history">Clear history</string>
    <string name="email">Email me</string>
    <string name="flash">Enable Adobe Flash</string>
    <string name="mobile">View as Mobile</string>
    <string name="desk">View as Desktop</string>
    <string name="custom">View as custom user agent</string>
    <string name="home">Homepage</string>
    <string name="settingshelp">Settings only apply to new tabs</string>
    <string name="fullscreen">Full-screen Mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="saveTab">Restore your tabs if they\'re lost</string>
    <string name="settings_title">Settings</string>
    <string name="download">Download Location</string>
    <string name="advanced">Advanced Settings</string>
    <string name="source">Source Code</string>
    <string name="license">License</string>
    <string name="github">github.com/anthonycr/Lightning-Browser</string>
    <string name="apache">Apache License 2.0</string>
    <string name="title_activity_new_settings">NewSettings</string>
    <string name="version">Application Version</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="block">Block Images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Enable Cookies</string>
    <string name="importbookmarks">Import bookmarks from Browser</string>
    <string name="size">Text size</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search Engine</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="restore">Restore lost tabs on start</string>
    <string name="stock_browser_unavailable">No stock browser detected</string>
    <string name="stock_browser_available">Supported stock browser detected</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="dialog_image">What would you like to do with this image?</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_link">What would you like to do with this link?</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="dialog_bookmark">What would you like to do with this bookmark?</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank Page</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">Custom</string>
    <string name="title_search_engine">Search Engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="dialog_adobe_dead">We\'re sorry, Google made some changes, and Adobe Flash no longer works on Android 4.4+</string>
    <string name="dialog_adobe_not_installed">Adobe Flash Player was not detected.\nPlease install Flash Player.</string>
    <string name="dialog_adobe_unsupported">Adobe Flash does not support Andoid 4.2 and above, and will crash the browser. Please do not report any crashes that occur if you enable Flash.</string>
    <string name="title_user_agent">User Agent</string>
    <string name="title_download_location">Download Location</string>
    <string name="title_custom_homepage">Custom Homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="dialog_reflow_warning">We\'re sorry, Google made some changes, and Text Reflow no longer works on Android 4.4+</string>
    <string name="title_clear_history">Clear History</string>
    <string name="title_clear_cookies">Clear Cookies</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text Size</string>
    <string name="size_largest">Largest</string>
    <string name="size_large">Large</string>
    <string name="size_normal">Normal</string>
    <string name="size_small">Small</string>
    <string name="size_smallest">Smallest</string>
    <string name="title_error">Error</string>
    <string name="dialog_import_error">No browser was detected to import bookmarks from.</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit Bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">New Incognito Tab</string>
    <string name="action_homepage">Default</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in Page</string>
    <string name="download_pending">Starting download\u2026</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="incognito_cookies">Enable Cookies in Incognito Mode</string>
    <string name="title_flash">Adobe Flash</string>
    <string name="action_manual">Manual</string>
    <string name="action_auto">Auto</string>
    <string name="action_follow_me">Contact Me</string>
    <string name="url_twitter">twitter.com/ACRDevelopment</string>
    <string name="clear_cache">Clear cache</string>
    <string name="message_cache_cleared">Cache Cleared</string>
</resources>