<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:scaleType="centerInside"
        android:src="@drawable/splashwhite" />

    <LinearLayout
        android:id="@+id/llStratUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Welcome_to"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvBoxer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:paddingLeft="2dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/In_Boxer"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvIndiasInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="roboto"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Indias_Internet"
            android:textColor="#969696"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/chkTnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I_Agree_with"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvTnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:paddingLeft="2dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Terms_and_Conditions"
                android:textColor="#000000"
                android:textSize="16dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/continue_selector"
            android:gravity="center_horizontal|center_vertical"
            android:padding="8dp"
            android:text="@string/CONTINUE"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>