<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    android:weightSum="2" >

    <LinearLayout
        android:id="@+id/llUpish"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:background="#00000000"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:background="#00000000"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/llSide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:background="#00000000"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:layout_marginRight="5dp"
            android:layout_weight="1.50"
            android:background="@drawable/menu_border"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="6dp" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/llSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvSettings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/settings"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSettingsSub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Control_and_customise_Boxer_Browser"
                            android:textColor="#a19898"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/gray_list_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llDefaultEngine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvDefaultEngine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Search_Engine"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvDefaultEngineSub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Set_your_default_search_engine"
                            android:textColor="#a19898"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/gray_list_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llHelp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvHelp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/help"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvHelpSub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Get_your_answers_here"
                            android:textColor="#a19898"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/gray_list_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llPnP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvPrivacyAndPolicy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Privacy_Policy"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPrivacyAndPolicySub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/User_privacy_policy"
                            android:textColor="#a19898"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/gray_list_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llTnC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvTermsAndConditions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Terms_and_Condition"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTermsAndConditionsSub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/User_License_Policy"
                            android:textColor="#a19898"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/gray_list_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvAbout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/About_Boxer"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAboutSub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/The_latest_from_Boxer_Browser"
                            android:textColor="#a19898"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/gray_list_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llRateUS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvRateUS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Rate_us"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvRateUSSub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Rate_us_substring"
                            android:textColor="#a19898"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"
                            android:background="@color/gray_list_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llFeedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvFeedback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Feedback"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvFeedbackSub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:text="@string/Drop_us_a_line"
                            android:textColor="#a19898"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <!-- <View -->
                    <!-- android:layout_width="match_parent" -->
                    <!-- android:layout_height="1.5dp" -->
                    <!-- android:background="#f2271e" /> -->
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/menufooter" />

</LinearLayout>